# claude-jtag-debug

./: .gitignore  .mcp.json  README.md  USAGE.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: bus-comparator.md  fault-analyst.md  register-explorer.md
commands/: capture.md  debug.md  diagnose.md  flash.md
hooks/: hooks.json  safety_gate.py
server/: __main__.py  mcp_server.py  safety.py  session_store.py
server/gdb/: __init__.py  mi_connection.py  mi_parser.py  session.py  types.py
server/probe/: __init__.py  detect.py  jlink.py  openocd.py  pyocd.py  qemu.py
server/saleae/: __init__.py  analyzer_config.py  capture.py  connection.py
server/svd/: __init__.py  decoder.py  parser.py  registry.py
skills/arm-cortex-debug/: SKILL.md
skills/arm-cortex-debug/references/: can-fd-reference.md  common-crash-patterns.md  cortex-m-fault-registers.md  gd32-ch32-reference.md  microchip-sam-reference.md  nxp-imxrt-reference.md  spi-protocol-reference.md  ti-msp-cc-reference.md
tests/: conftest.py  test_integration_gdb.py  test_mi_connection.py  test_mi_parser.py  test_probe_detect.py  test_qemu_system.py  test_qemu_usermode.py  test_safety.py  test_saleae_capture.py  test_session.py  test_svd_decoder.py
tests/firmware/: Makefile  link.ld  test_fault.c  test_spi.c
tests/fixtures/: test_target.c
